<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoB2HTitleTextViewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/info_b2h_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/infoB2HExample1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2h_example1" />

                <TextView
                    android:id="@+id/infoB2HStep1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2h_step1"/>

                <TextView
                    android:id="@+id/infoB2HExample2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2h_example2" />

                <TextView
                    android:id="@+id/infoB2HStep2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2h_step2" />

                <TextView
                    android:id="@+id/infoB2HExample3TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2h_example3" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoB2DTitleTextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/info_b2d_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/infoB2DExample1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2d_example1" />

                <TextView
                    android:id="@+id/infoB2DStep1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2d_step1" />

                <TextView
                    android:id="@+id/infoB2DExample2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2d_example2" />

                <TextView
                    android:id="@+id/infoB2DStep2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2d_step2" />

                <TextView
                    android:id="@+id/infoB2DExample3TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_b2d_example3" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoH2BTitleTextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/info_h2b_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/infoH2BExample1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2b_example1" />

                <TextView
                    android:id="@+id/infoH2BStep1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2b_step1" />

                <TextView
                    android:id="@+id/infoH2BExample2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2b_example2" />

                <TextView
                    android:id="@+id/infoH2BStep2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2b_step2" />

                <TextView
                    android:id="@+id/infoH2BExample3TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2b_example3" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoH2DTitleTextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/info_h2d_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/infoH2DExample1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2d_example1" />

                <TextView
                    android:id="@+id/infoH2DStep1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2d_step1" />

                <TextView
                    android:id="@+id/infoH2DExample2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2d_example2" />

                <TextView
                    android:id="@+id/infoH2DStep2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2d_step2" />

                <TextView
                    android:id="@+id/infoH2DExample3TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_h2d_example3" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoD2BTitleTextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/info_d2b_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/infoD2BExample1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2b_example1" />

                <TextView
                    android:id="@+id/infoD2BStep1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2b_step1" />

                <TextView
                    android:id="@+id/infoD2BExample2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2b_example2" />

                <TextView
                    android:id="@+id/infoD2BStep2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2b_step2" />

                <TextView
                    android:id="@+id/infoD2BExample3TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2b_example3" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoD2HTitleTextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/info_d2h_title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/infoD2HExample1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2h_example1" />

                <TextView
                    android:id="@+id/infoD2HStep1TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2h_step1" />

                <TextView
                    android:id="@+id/infoD2HExample2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2h_example2" />

                <TextView
                    android:id="@+id/infoD2HStep2TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2h_step2" />

                <TextView
                    android:id="@+id/infoD2HExample3TextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/info_d2h_example3" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>