<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aboutApplicationCreditsTextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_application_credits"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/aboutRole1TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_role1"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/aboutCredit1TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/about_credit_william"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/aboutCredit2TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/about_credit_paul"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/aboutRole2TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_role2"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/aboutCredit3TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/about_credit_william"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/aboutCredit4TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/about_credit_paul"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/aboutSpecialThanksTextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_special_thanks"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/aboutRole3TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_role3"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/aboutCredit5TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/about_credit_fintan"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/aboutRole4TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_role4"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/aboutCredit6TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/about_credit_sebastian"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/aboutCredit7TextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/about_credit_fintan"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>


</ScrollView>