<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/baseInputTextViewID"
                android:layout_width="0dp"
                android:text="@string/input"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/baseResultTextViewID"
                android:layout_width="0dp"
                android:text="@string/result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_marginTop="30dp">

            <Spinner
                android:id="@+id/baseInputSpinnerID"
                style="@android:style/Widget.Material.Light.Spinner.Underlined"
                android:layout_width="0dp"
                android:entries="@array/base_array" />

            <Spinner
                android:id="@+id/baseOutputSpinnerID"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:entries="@array/base_array" />
        </TableRow>

        <TableRow
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/baseInputEditTextID"
                android:layout_width="0dp"
                android:ems="10"
                android:hint="@string/base_hint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/baseOutputTextViewID"
                android:layout_width="0dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/baseConvertButtonID"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="0dp"
                android:text="@string/convert" />

            <Button
                android:id="@+id/baseOutputButtonID"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="0dp"
                android:text="@string/output" />
        </TableRow>

    </TableLayout>

</ScrollView>